--- a/btc/parameters/defaults.yaml
+++ b/btc/parameters/defaults.yaml
@@ -109,6 +109,11 @@ values:
     - jonatack
     - will8clark
   version: latest
+  tofs:
+    files_switch:
+      - id
+      - roles
+      - os_family
   # Just here for testing
   added_in_defaults: defaults_value
   winner: defaults
